# osprey

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/osprey/: __init__.py  __main__.py  app.py
src/osprey/config/: __init__.py  settings.py
src/osprey/engine/: __init__.py  base.py  grep.py  registry.py  ripgrep.py
src/osprey/replace/: __init__.py  dialog.py  engine.py
src/osprey/results/: __init__.py  io.py  model.py
src/osprey/ui/: __init__.py  diff_utils.py  main_window.py  preview_panel.py  result_panel.py  search_panel.py  settings_dialog.py  workers.py
